# Paraphrase

./: .gitignore  EXPERIMENT_GUIDELINE.md  PREREGISTRATION.md  README.md  pyproject.toml  requirements-dev.txt
configs/: experiment_external.yaml  experiment_main.yaml  experiment_ppcv.yaml  experiment_scop.yaml  model_qwen3_8b.yaml
environment/: paraphrase.def  requirements.runtime.txt
reports/: pilot_report.md
slurm/: 00_build_container.sbatch  00_paraphrases.sbatch  00_paraphrases_short.sbatch  00_stage_assets.sbatch  adjudicate_scores.sbatch  analyze.sbatch  common.sh  round0_smoke_l40s.sbatch  round0_smoke_pilot.sbatch  round1_main_nonthinking.sbatch  round2_main_thinking.sbatch  round3_scop.sbatch  round4_ppcv.sbatch  round5_external.sbatch
src/: __init__.py  analyze_ppcv.py  analyze_results.py  build_semantic_audit.py  common.py  estimate_budget.py  generate_paraphrases.py  inference_plan.py  judge_scores.py  metrics.py  paraphrase_gates.py  preflight.py  prepare_data.py  record_environment.py  run_inference.py  run_ppcv.py  score_outputs.py  scoring.py  stage_assets.py  validate_paraphrases.py
tests/: test_analysis.py  test_audit.py  test_common.py  test_data.py  test_metrics.py  test_paraphrase_gates.py  test_prompts.py  test_runtime_scripts.py  test_scoring.py  test_slurm_resources.py
